--- a/src/ext/css/common.scss
+++ b/src/ext/css/common.scss
@@ -1,3 +1,5 @@
+@import "../../../node_modules/sass-svg-uri/_svg-uri.scss";
+
 html, body {
     margin: 0px;
     padding: 0px;
@@ -5,4 +7,17 @@ html, body {
 
 html {
     overflow-y: scroll;
+}
+
+body {
+    min-height: 100vh;
+    background-color: lighten(#cfd8dc, 5%);
+    background-image: svg-uri('<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 49"><path fill="#cfd8dc" fill-rule="nonzero" d="M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z"/></svg>');
+
+    // Helpful bit of maths to work out the corrext dimensions for the viewBox
+    $background-aspect: 28 / 49;
+    $background-width: 40px;
+    $background-height: $background-width * (1 / $background-aspect);
+
+    background-size: $background-width $background-height;
 }
