--- a/src/ext/css/common.scss
+++ b/src/ext/css/common.scss
@@ -1,5 +1,13 @@
 @import "../../../node_modules/sass-svg-uri/_svg-uri.scss";
 
+*, *::before, *::after {
+    box-sizing: inherit;
+}
+
+html {
+    box-sizing: border-box;
+}
+
 html, body {
     margin: 0px;
     padding: 0px;
@@ -20,4 +28,14 @@ body {
     $background-height: $background-width * (1 / $background-aspect);
 
     background-size: $background-width $background-height;
+
+    font-family: 'Source Sans Pro', sans-serif;
+    color: #101010;
+}
+
+a {
+    &:link, &:visited, &:hover, &:active {
+        color: inherit;
+        text-decoration: none;
+    }
 }
